# ProcTranslator

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  scheme.drawio
.github/workflows/: ci.yml
examples/: array.java  bool.java  calc.java  cat.interrupt  classes.java  double.java  for.java  hello_user.interrupt  hello_world.java  matrix.java  matrix_simd.java  params.java  prob1.java  sort.interrupt  vector_test.java  vector_test_simd.java
examples/correct/: array.java  bitwise.java  calc.java  cat.java  classes.java  double.java  for.java  global.java  hello_user.java  hello_world.java  interrupt.java  matrix.java  matrix_simd.java  params.java  prob1.java  return.java  scopes.java  sort.java  (+2 more)
output/: array.dot  bitwise.dot  bool.dot  calc.dot  cat.dot  cfg.dot  classes.dot  double.dot  for.dot  global.dot  hello_user.dot  hello_world.dot  interrupt.dot  matrix.dot  matrix_simd.dot  params.dot  prob1.dot  return.dot  scopes.dot  sort.dot  vector.dot  vector_test.dot  vector_test_simd.dot  while.dot
schemes/: array.dot  bitwise.dot  bool.dot  calc.dot  cat.dot  classes.dot  double.dot  for.dot  global.dot  hello_user.dot  hello_world.dot  params.dot  prob1.dot  return.dot  sort.dot  vector.dot  vector_test.dot  vector_test_simd.dot  while.dot
src/: analyzer.rs  ast.rs  common.rs  expression.rs  fio.rs  ir.rs  isa.md  isa.rs  lib.rs  logger.rs  main.rs  parser.rs  simplifier.rs  tests.rs  translator.rs
tests/: alu_tests.rs  ast_tests.rs  golden.rs  incorrect_tests.rs  ir_tests.rs  parser_tests.rs  semantic_analysis_tests.rs  simplified_ast_tests.rs  tests.rs
(+142 files in other folders)
