[package]
name = "proc-translator"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
regex = "1.10.6"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
